<resources>
    <string name="app_name">Demo DatabaseCRUD</string>
    <string name="enter_data_to_be_inserted_here">Enter data to be inserted here:</string>
    <string name="insert">insert</string>
    <string name="edit">edit</string>
    <string name="retrieve">retrieve</string>
    <string name="id">ID:</string>
    <string name="content">Content:</string>
    <string name="name">Name</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
</resources>